--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <script src="assets/d3.min.js"></script>
     <script src="assets/data.js"></script>
+    <script src="heatmap.js"></script>
   </body>
 
 </html>
