Changing temp units with select tag

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       </h1>
 
       <select>
-        <option>C</option>
-        <option>F</option>
+        <option value="c">Celsius</option>
+        <option value="f">Fahrenheit</option>
       </select>
     </header>
 
